--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,8 @@
     --warning-foreground: 0 0% 100%;
     --danger: 10 100% 50%;
     --danger-foreground: 0 0% 100%;
+    --info: 260 100% 60%;
+    --info-foreground: 0 0% 100%;
     --link: 214 100% 50%;
     --link-foreground: 0 0% 100%;
     --sidebar-link: 214 100% 50%;
@@ -148,6 +150,7 @@
   }
 
   .btn-accent:hover {
+    background-color: hsl(var(--accent) a(0.8));
     box-shadow: 0 4px 10px hsl(var(--accent) / 0.5);
     transform: scale(1.05);
   }
@@ -202,6 +205,24 @@
 
   .btn-danger:hover {
     box-shadow: 0 4px 10px hsl(var(--danger) / 0.9);
+    transform: scale(1.05);
+    cursor: pointer;
+  }
+
+  .btn-info {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.375rem;
+    background-color: hsl(var(--info));
+    padding: 0.75rem 1.5rem;
+    color: hsl(var(--info-foreground));
+    font-weight: bold;
+    transition: all 0.3s;
+  }
+
+  .btn-info:hover {
+    box-shadow: 0 4px 10px hsl(var(--info) / 0.5);
     transform: scale(1.05);
     cursor: pointer;
   }
