Made reviews dynamic. Added login button to burger menu. Refactored ProgressStepper.

--- a/src/index.css
+++ b/src/index.css
@@ -507,4 +507,13 @@
   footer li a:hover {
     color: #007bff;
   }
+
+  /* Add to your global CSS */
+  .scrollbar-hide {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome/Safari/Webkit */
+  }
 }
